Updated NetListening-Version @terrarier2111

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Communication_Spigot</name>
+	<name>BusyCloud-Spigot</name>
 	<comment></comment>
 	<projects>
 	</projects>
