--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/mcneo/G/APIs/spigot-1.8.8-R0.1-SNAPSHOT-latest.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mcneo/G/APIs/NetListening.jar"/>
-	<classpathentry kind="lib" path="C:/Users/mcneo/G/APIs/netty-all-4.1.63.Final.jar"/>
+	<classpathentry kind="lib" path="E:/API/NetListening (1).jar"/>
+	<classpathentry kind="lib" path="E:/API/netty-all-4.1.63.Final.jar"/>
+	<classpathentry kind="lib" path="E:/API/spigot-1.8.8-R0.1-SNAPSHOT-latest.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
